# picmol

./: .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  __init__.py  conf.py  conversions.py  environment.yml  estimator.py  get_molecular_properties.py  index.rst  kbi.py  plotter.py  presentation.mplstyle  pyproject.toml  requirements.txt  thermo_model.py
data/: Esper2023_pcpsaft_parameters.csv  molecular_properties.csv  pcsaft_parameters.csv  pubchem_element_properties.csv
data/sxdb/: D.csv  SF.csv  db_extraction.ipynb
data/water_alcohol_llps/:  1-Butanol_ Water.csv   1-Decanol_ Water.csv   1-Dodecanol_ Water.csv   1-Heptanol_ Water.csv   1-Hexadecanol_ Water.csv   1-Hexanol_ Water.csv   1-Nonanol_ Water.csv   1-Octanol_ Water.csv   1-Pentanol_ Water.csv  0.csv  3.csv  (+12 more)
docs/: cmd_line_tools.rst  conf.py  examples.rst  generate_file_tree.py  index.rst  modules.rst  picmol.functions.rst  picmol.get_molecular_properties.rst  picmol.kbi.rst  picmol.kbi_analysis.rst  picmol.models.cem.cem_analysis.rst  picmol.models.cem.lle.rst  picmol.models.cem.point_discretization.rst  picmol.models.cem.rst  picmol.models.fh.rst  picmol.models.nrtl.rst  picmol.models.numerical.rst  picmol.models.unifac.rst  picmol.models.unifac_subgroups.fragmentation.fragmentation_models.gibbs_model.rst  picmol.models.unifac_subgroups.fragmentation.get_model_subgroups.rst  picmol.models.unifac_subgroups.fragmentation.get_rdkit_object.rst  picmol.models.unifac_subgroups.fragmentation.groups.rst  picmol.models.unifac_subgroups.fragmentation.problematics.rst  picmol.models.unifac_subgroups.fragmentation.rst  picmol.models.unifac_subgroups.rst  picmol.models.unifac_subgroups.unifac_subgroup_parameters.rst  picmol.models.uniquac.rst  picmol.plotter.rst  picmol.thermo_model.rst  picmol.traj_process.make_rdf_runscript.rst  requirements.txt
examples/: 01_kbi_analysis.ipynb  unifac_lle.ipynb
models/: __init__.py  nrtl.py  unifac.py  uniquac.py
tutorials/: unifac_Tc_search_binary_system.ipynb  unifac_lle.ipynb
(+282 files in other folders)
